apps/external-apps/file-server/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: file-server
  namespace: traefik
spec:
  ports:
    - protocol: TCP
      port: 8095
      targetPort: 8095

---
apiVersion: v1
kind: Endpoints
metadata:
  name: file-server
  namespace: traefik
subsets:
  - addresses:
      - ip: 192.168.0.10
    ports:
      - port: 8095
